Fix overflowing Text when on mobile screen | Remove fix width and changes to Auto

--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ a:hover {
   font-size: 1.5em;
   color: #333;
   margin-bottom: 20px;
-  width: 50ch;
+  width: auto;
   padding-left: 1.5em;
   align-items: center;
 }
